--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "geoip-lite": "^1.2.1",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "phantom": "^4.0.12"
   },
   "devDependencies": {},
   "scripts": {
